Added v0.1-beta1 Win32 binary package

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style type="text/css">
     body {
       margin-top: 1.0em;
-      background-color: #d4d6de;
+      background-color: white;
       font-family: Helvetica, Arial, FreeSans, san-serif;
       color: #000000;
     }
@@ -42,8 +42,8 @@
         <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
 
-    <h1><a href="http://github.com/DaneGardner/ThreeBrooks">ThreeBrooks</a>
-      <span class="small">by <a href="http://github.com/DaneGardner">DaneGardner</a></span></h1>
+    <h1><a href="http://github.com/DaneGardner/ThreeBrooks">Three Brooks</a></h1>
+    <h4>by <a href="http://github.com/DaneGardner">Dane Gardner</a></h4>
 
     <div class="description">
       A dead-simple homebrewing recipe application
@@ -52,13 +52,13 @@
     <p>ThreeBrooks is a dead-simple, cross-platform homebrewing recipe application.  I grew tired of
 the "kitchen sink" applications that tried to squeeze every single feature into a single panel.
 Database programmers should not be GUI designers, otherwise you end up with something that
-looks like a Microsoft Access application.
-
+looks like a Microsoft Access application.<br/>
+<br/>
 As a matter of fact, I was so unhappy with most of the desktop software available for
 homebrewing that I was using spreadsheets to do most of my calculations.  While doing this, I
 realized that every application out there was shooting mice with cannons.  I don't need all of
-that functionality, and prefer a simplified interface.
-
+that functionality, and prefer a simplified interface.<br/>
+<br/>
 Given that there weren't any real open-source  applications offering all of the features that I
 wanted to see, and none that I didn't, I decided to write my own from scratch.  It also allowed
 me to learn a bit more of the details about GUI programming with the Qt4 framework, which I use
@@ -68,18 +68,18 @@ for my work.
 <h2>Install</h2>
 <p>See the wiki for compiling and installation instructions.</p>
 <h2>License</h2>
-<p>Copyright (C) 2011 Dane Gardner
-
+<p>Copyright (C) 2011 Dane Gardner. All rights reserved<br/>
+<br/>
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
-(at your option) any later version.
-
+(at your option) any later version.<br/>
+<br/>
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU General Public License for more details.
-
+GNU General Public License for more details.<br/>
+<br/>
 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.</p>
 <h2>Authors</h2>
