Added binaries link to page

--- a/index.html
+++ b/index.html
@@ -88,7 +88,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.</p>
 <p>Dane Gardner <dane.gardner@gmail.com><br/>      </p>
 
 
-    <h2>Download</h2>
+    <h2>Download Binaries</h2>
+    <p>You can download the current beta for Windows platforms from here:<br/>
+      <a href="ThreeBrooks-v0.1-beta1.zip">ThreeBrooks-v0.1-beta1.zip</a><br/>
+    </p>
+    <h2>Download Source</h2>
     <p>
       You can download this project in either
       <a href="http://github.com/DaneGardner/ThreeBrooks/zipball/master">zip</a> or
